fix approach on small devices

--- a/src/styles/_approach.scss
+++ b/src/styles/_approach.scss
@@ -92,6 +92,15 @@
   }
 
   @media (max-width: 600px) {
+    margin-left: 10px ;
+    padding-left: 20px;
+    display: flex;
+    justify-content: center;
+    
+    &__article {
+      padding-right: 20px;
+    }
+
     &__pic {
       display: none;
     }
